src/css/index.module.css
.wrapper {
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
   background: #121212;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(3, 1fr);
}

#img {
   padding: 1em;
   background: #121212;
   box-shadow: 10px 0px 20px #000, -10px 0px 20px #000;
   transition: transform 500ms ease-in-out;
   grid-column:  4 / 8;
   grid-row: 1 / span 3;
   display: grid;
   align-content: center;
   z-index: 3;
}

svg {
   margin: 0;
   padding: 0;
 }
 
#debate {
   height: 100vh;
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   font-size: 75px;
   font-weight: bold;
   color: white;
   background: #121212;
   opacity: .5;
   transition: opacity 300ms ease-in-out;
   grid-column: 1 / 7;
   grid-row: 2 / span 1;
   z-index: 2;
   overflow: hidden;
}

#debate:hover ~ #img {
   transform: translateX(75%);
}

#debate:hover {
   opacity: 1;
}

#dev {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue";
   font-size: 75px;
   font-weight: bold;
   color: white;
   background: #121212;
   opacity: .5;
   transition: opacity 300ms ease-in-out;
   grid-column: 6 / 11;
   grid-row: 2 / span 1;
   z-index: 1;
   overflow: hidden;
   justify-self: end;
}

#dev:hover + #img {
   transform: translateX(-75%);
}

#dev:hover {
   opacity: 1;
   z-index: 3;
}

